<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Basket">
    <item android:id="@+id/action_create_list"
        android:title="@string/action_create_list"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_list"
        android:title="@string/title_activity_listall"
        android:icon="@drawable/ic_list_black_24dp"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>