<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kv.basket.AddProduct">
    <LinearLayout android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:padding="5dp">
        <TextView android:id="@+id/listNameExt"
            android:color="@android:color/black" android:textSize="18sp"
            android:paddingTop="10dp" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" ></TextView>

        <EditText android:id="@+id/nameListEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_namelist"
            android:inputType="textPersonName|textCapWords"></EditText>
        <EditText android:id="@+id/countListEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext" android:hint="@string/hint_countlist"
            android:inputType="phone"></EditText>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/priceEditText"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" android:hint="@string/hint_pricelist">
        </EditText>
    </LinearLayout>
</RelativeLayout>
